scrolling on mobile fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -442,7 +442,7 @@ section {
   }
 
   @media (min-width: $breakpoint-desktop) {
-    margin-top: 13% !important;
+    margin-top: 14% !important;
   }
 
   @media (min-width: $breakpoint-tablet){
@@ -497,7 +497,7 @@ section {
 .resume .content .resume-text{
 
   display: block;
-  height: 70%;
+  height: 87%;
   padding: 30px 30px 10% 30px;
   overflow-y: auto;
 
@@ -533,7 +533,7 @@ section {
 
   @media (min-width: $breakpoint-mobile) {
 
-    height: 50%;
+    height: 75%;
     padding: 0 20% 10% 20%;
 
     .summary {
@@ -620,7 +620,7 @@ section {
 
   .project-content {
     display: none;
-    height: 70%;
+    height: calc(100% - 100px);
     padding: 0 30px;
 
     opacity: 0;
@@ -650,6 +650,10 @@ section {
 
   @media (min-width: $breakpoint-tablet){
 
+    .content .project-content {
+      height: 87%;
+    }
+
     .img-container {
       .half-width {
         width: 50%;
@@ -661,7 +665,12 @@ section {
 
   @media (min-width: $breakpoint-mobile) {
 
+    iframe {
+      height: 563px // Set to precise height through js
+    }
+
     .content .project-content {
+      height: 84%;
       padding: 0 20%;
     }
 
